// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TDD Ops Vacancy card renders certification vacancy correctly 1`] = `
<div
  className="ops-vacancy-card---grey"
>
  <div
    className="ops-vacancy-card__role-name"
  >
    Wava Wehner MD...
  </div>
  <div>
    <span
      className="ops-vacancy-card__project-slot__label"
    >
      Slots: 
    </span>
    <span
      className="ops-vacancy-card__project-slot__number"
    >
      2
    </span>
  </div>
  <div>
    <span
      className="ops-vacancy-card__project-start-date__label"
    >
      Starting: 
    </span>
    <span
      className="ops-vacancy-card__project-start-date__number"
    >
      2019-08-10
    </span>
  </div>
  <div
    className="ops-vacancy-card__project-date-countdown"
  >
    <span
      className="ops-vacancy-card__project-slot__label"
    >
      Days Left:
       
    </span>
    <span
      className="text-danger"
    >
      Closed
    </span>
  </div>
  <div
    className="ops-vacancy-card__applications"
  >
    1
     application
  </div>
</div>
`;

exports[`TDD Ops Vacancy card renders project vacancy correctly 1`] = `
<div
  className="ops-vacancy-card"
>
  <div
    className="ops-vacancy-card__icon"
    data-toggle="dropdown"
  >
    <div
      className="d-flex pr-3 align-items-center"
    >
      <img
        alt=""
        src="More.svg"
      />
    </div>
  </div>
  <div
    className="dropdown-menu dropdown-menu-right"
  >
    <button
      className="dropdown-item"
      data-target="#addVacanciesModal"
      data-toggle="modal"
      onClick={[Function]}
      type="button"
    >
      Edit
    </button>
    <button
      className="dropdown-item"
      data-target="#deleteVacanciesModal"
      data-toggle="modal"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>
  <div
    className="ops-vacancy-card__role-name"
  >
    Engineer
  </div>
  <div>
    <span
      className="ops-vacancy-card__project-slot__label"
    >
      Slots: 
    </span>
    <span
      className="ops-vacancy-card__project-slot__number"
    >
      5
    </span>
    <span
      className="ops-vacancy-card__project"
    >
       on Corruption.
    </span>
  </div>
  <div>
    <span
      className="ops-vacancy-card__project-start-date__label"
    >
      Starting: 
    </span>
    <span
      className="ops-vacancy-card__project-start-date__number"
    >
      NaN-NaN-NaN
    </span>
  </div>
  <div
    className="ops-vacancy-card__project-date-countdown"
  >
    <span
      className="ops-vacancy-card__project-slot__label"
    >
      Days Left:
       
    </span>
    <span
      className=""
    >
      NaN days
    </span>
  </div>
  <div
    className="ops-vacancy-card__applications"
  >
    0
     applications
  </div>
</div>
`;
